--- a/apps/next-app/tsconfig.json
+++ b/apps/next-app/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "@repo/config-typescript/nextjs.json",
   "compilerOptions": {
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@ui/*": ["../../packages/ui/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
