--- a/packages/config-tailwind/package.json
+++ b/packages/config-tailwind/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    ".": "./tailwind.config.ts"
+    ".": "./tailwind.config.ts",
+    "./postcss": "./postcss.config.js"
   },
   "devDependencies": {
     "@repo/config-typescript": "*",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss": "^3.4.0",
-    "tailwindcss-animate": "^1.0.6"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39"
   }
 }
