Update eslint config

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -7,6 +7,6 @@
       "@shadcn/*": ["src/components/shadcn/ui/*"]
     }
   },
-  "include": ["."],
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
