--- a/apps/express-app/package.json
+++ b/apps/express-app/package.json
@@ -10,9 +10,9 @@
     "dev": "nodemon src/index.ts"
   },
   "devDependencies": {
-    "@repo/config-eslint": "*",
-    "@repo/config-tailwind": "*",
-    "@repo/config-typescript": "*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/config-tailwind": "workspace:*",
+    "@repo/config-typescript": "workspace:*",
     "@types/express": "^4.17.21",
     "@types/node": "^20",
     "dotenv-cli": "^7.4.2",
