--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev | pino-pretty",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,18 +12,19 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.4",
-    "@repo/ui": "*"
+    "@repo/ui": "workspace:*"
   },
   "devDependencies": {
-    "@repo/config-tailwind": "*",
-    "@repo/config-typescript": "*",
-    "@repo/config-eslint": "*",
+    "@repo/config-tailwind": "workspace:*",
+    "@repo/config-typescript": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39"
+    "postcss": "^8.4.39",
+    "pino-pretty": "^11.2.1"
   }
 }
