--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/lib-esm",
+  "name": "@repo/utils",
   "version": "1.0.0",
   "description": "",
   "exports": {
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@repo/config-eslint": "*",
-    "@repo/config-typescript": "*",
+    "@repo/config-typescript": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
     "@types/node": "^20.5.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@logtail/next": "^0.1.5",
+    "pino": "^9.2.0"
+  }
 }
