Update shared configs

--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -15,8 +15,8 @@
     "@repo/ui": "workspace:*"
   },
   "devDependencies": {
-    "@repo/config-tailwind": "workspace:*",
-    "@repo/config-typescript": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "typescript": "^5",
     "@types/node": "^20",
