--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,13 +1,10 @@
 {
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
-    "paths": {
-      "@/*": ["./*"]
-    },
     "composite": true,
     "incremental": true,
     "outDir": "dist"
   },
-  "include": ["src"],
+  "include": ["src", "drizzle.config.ts"],
   "exclude": ["node_modules"]
 }
