--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/config-tailwind",
+  "name": "@repo/tailwind-config",
   "version": "0.0.0",
   "private": true,
   "exports": {
@@ -7,7 +7,7 @@
     "./postcss": "./postcss.config.js"
   },
   "devDependencies": {
-    "@repo/config-typescript": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.19",
