--- a/apps/express-app/package.json
+++ b/apps/express-app/package.json
@@ -11,8 +11,8 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/config-tailwind": "workspace:*",
-    "@repo/config-typescript": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/express": "^4.17.21",
     "@types/node": "^20",
     "dotenv-cli": "^7.4.2",
