--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,12 +10,13 @@
     "./custom/*": "./src/components/custom/ui/*.tsx"
   },
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "shadcn": "npx shadcn@latest add"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/config-tailwind": "workspace:*",
-    "@repo/config-typescript": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/react": "^18",
     "@types/react-dom": "^18"
   },
