--- a/apps/hono-app/tsconfig.json
+++ b/apps/hono-app/tsconfig.json
@@ -12,13 +12,5 @@
     "typeRoots": ["./node_modules/@types", "./src/typings"]
   },
   "include": ["./src/**/*.ts"],
-  "exclude": ["node_modules"],
-  "references": [
-    {
-      "path": "../../packages/utils"
-    },
-    {
-      "path": "../../packages/database"
-    }
-  ]
+  "exclude": ["node_modules"]
 }
