--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typegen": "next typegen",
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "react": "^19",
