--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "extends": "@workspace/typescript-config/base.json",
-  "compilerOptions": {
-    "composite": true,
-    "incremental": true,
-    "outDir": "dist"
-  },
+  "compilerOptions": {},
   "include": ["src", "drizzle.config.ts"],
   "exclude": ["node_modules"]
 }
