--- a/apps/next-app/tsconfig.json
+++ b/apps/next-app/tsconfig.json
@@ -2,11 +2,8 @@
   "extends": "@workspace/typescript-config/nextjs.json",
   "compilerOptions": {
     "paths": {
-      "@/*": [
-        "./*"
-      ]
-    },
-    "jsx": "preserve"
+      "@/*": ["./*"]
+    }
   },
   "include": [
     "**/*.ts",
@@ -15,7 +12,5 @@
     "next.config.js",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
