--- a/package.json
+++ b/package.json
@@ -8,9 +8,21 @@
   "engines": {
     "node": ">=22"
   },
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
-  "packageManager": "pnpm@10.17.1"
+  "workspaces": {
+    "packages": [
+      "apps/*",
+      "packages/*"
+    ],
+    "catalog": {
+      "react": "^19.2.0",
+      "react-dom": "^19.2.0",
+      "@types/react": "19.2.2",
+      "@types/react-dom": "19.2.2",
+      "@types/node": "^22",
+      "drizzle-orm": "^0.44.7",
+      "zod": "^4.1.12",
+      "tailwindcss": "^4.1.16"
+    }
+  },
+  "packageManager": "bun@1.3.2"
 }
