--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,8 +17,8 @@
   "devDependencies": {
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
-    "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -57,16 +57,16 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
     "next-themes": "^0.4.6",
-    "react": "^19",
+    "react": "catalog:",
     "react-day-picker": "^9.8.1",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.4",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "catalog:",
     "tw-animate-css": "^1.3.5",
     "vaul": "^1.1.2",
-    "zod": "^4.0.17"
+    "zod": "catalog:"
   }
 }
