--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -57,7 +57,6 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
     "next-themes": "^0.4.6",
-    "react": "catalog:",
     "react-day-picker": "^9.8.1",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.4",
@@ -68,5 +67,9 @@
     "tw-animate-css": "^1.3.5",
     "vaul": "^1.1.2",
     "zod": "catalog:"
+  },
+  "peerDependencies": {
+    "react": "catalog:",
+    "react-dom": "catalog:"
   }
 }
