--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -4,9 +4,7 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "composite": true,
-    "incremental": true,
-    "outDir": "dist"
+    "lib": ["ESNext", "DOM", "DOM.Iterable"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
