--- a/apps/hono-app/package.json
+++ b/apps/hono-app/package.json
@@ -26,6 +26,7 @@
     "zod-validation-error": "^4.0.1"
   },
   "devDependencies": {
+    "@types/bun": "^1.3.1",
     "@types/node": "catalog:",
     "@workspace/typescript-config": "workspace:*"
   }
