Update ui package

--- a/apps/next-app/tsconfig.json
+++ b/apps/next-app/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "@workspace/typescript-config/nextjs.json",
   "compilerOptions": {
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@ui/*": ["../../packages/ui/src/*"]
     }
   },
   "include": [
